fix: form scrollbar

--- a/src/pages/Map/components/ContactForm/index.module.css
+++ b/src/pages/Map/components/ContactForm/index.module.css
@@ -1,13 +1,26 @@
 .content {
-  padding: 20px 38px;
+  padding: 20px 40px;
   min-width: 220px;
-  max-width: 420px;
+  max-width: 480px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   text-align: left;
   overflow: auto;
   text-align: justify;
+}
+
+::-webkit-scrollbar {
+  width: 2px;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  outline: 1px solid slategrey;
 }
 
 .formInput {
